# safeuploads

./: .gitignore  404.html  CONTRIBUTING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/agents/: se-gitops-ci-specialist.agent.md  se-security-reviewer.agent.md
.github/instructions/: agents.instructions.md  python.instructions.md
.github/workflows/: docs.yml  fuzz.yml  lint&test.yml  publish.yml
api/: index.html
docs/: index.md  rate-limiting.md
docs/security/: architecture.md  integration-checklist.md  threat-model.md
examples/: fastapi_example.py
rate-limiting/: index.html
safeuploads/: __init__.py  audit.py  config.py  enums.py  exceptions.py  file_validator.py  protocols.py  utils.py
safeuploads/inspectors/: __init__.py  content_inspector.py  gzip_inspector.py  zip_inspector.py
safeuploads/validators/: __init__.py  base.py  compression_validator.py  extension_validator.py  unicode_validator.py  windows_validator.py  xml_validator.py
security/architecture/: index.html
security/integration-checklist/: index.html
security/threat-model/: index.html
tests/: conftest.py  test_audit.py  test_config.py  test_config_validation.py  test_enums.py  test_exceptions.py  test_file_validator.py  test_performance.py  test_utils.py  test_validate_activity_file.py  test_validate_gzip_file.py
tests/fuzz/: __init__.py  test_fuzz_config.py  test_fuzz_filenames.py  test_fuzz_images.py  test_fuzz_zip.py
tests/inspectors/: test_content_inspector.py  test_gzip_inspector.py  test_zip_inspector.py
tests/validators/: test_compression_validator.py  test_extension_validator.py  test_unicode_validator.py  test_windows_validator.py  test_xml_validator.py
